--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Oi</h1>
+    
+    <section id="telefone">
+
+    </section>
+
+    <section id="redes-sociais">
+
+    </section>
     
 </body>
 </html>
