--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <section id="telefone">
-
+        <iframe src="home.html" name="tela" id="tela"></iframe>
     </section>
 
     <section id="redes-sociais">
