--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     </section>
 
     <section id="redes-sociais">
-
+        <a href="imagens/tela-home.jpg" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a>
+        <a href="imagens/logo-youtube.jpg" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
+        <a href="imagens/tela-github.jpg" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a>
+        <a href="imagens/tela-instagram.jpg" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+        <a href="imagens/tela-twitter.jpg" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+        <a href="imagens/tela-facebook.jpg" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
     </section>
     
 </body>
